Adding project-starter-docker module to build docker image